[package]
name = "treerder"
version = "3.0.2"
authors= [ "software9119.technology" ]
edition = "2021"
description = "Trie ordering for type implementing Orderable."
readme = "./README.md"
homepage = "https://github.com/bravequickcleverfibreyarn/treerder"
repository = "https://github.com/bravequickcleverfibreyarn/treerder"
license = "MIT"
keywords = ["trie","ordering","sorting","retrieval-tree"]
categories = ["algorithms"]
documentation = "https://docs.rs/treerder/latest/treerder/"

[features]
test-ext = []
