[package]
name = "treerder"
version = "3.0.5"
authors= [ "software9119.technology" ]
edition = "2021"
description = "Trie ordering for type implementing Orderable."
readme = "./README.md"
repository = "https://github.com/deep-outcome/treerder"
license = "MIT"
keywords = ["trie","ordering","sorting","retrieval-tree"]
categories = ["algorithms"]
documentation = "https://docs.rs/treerder/latest/treerder/"
exclude = ["/rustfmt.toml"]

[features]
test-ext = []
